--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,8 +6,12 @@
 
             <router-outlet></router-outlet>
 
+
+
         </div>
     </div>
 </div>
 
 <button class="btn btn-danger">btn</button>
+
+<app-body></app-body>
