--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -5,6 +5,7 @@
                 <li routerLinkActive="active"> <a routerLink="recipes">Recipes</a> </li>
                 <li routerLinkActive="active"> <a routerLink="shopping-list">Shopping List</a></li>
                 <li>Shared</li>
+                <li>Forms</li>
             </ul>
             <hr>
             <button class="btn btn-primary" (click)=onCreateServer()>btn</button>
